--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:name=".EditTerminalActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".TerminalCmdActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
